--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@ body{font-family:Arial,sans-serif;background:#fff8f2;color:#333}
 header{background:#fff;padding:16px;box-shadow:var(--shadow)}
 .container{max-width:1100px;margin:auto;padding:16px}
 .nav{display:flex;justify-content:space-between;align-items:center}
-.logo{background:var(--accent);color:#fff;padding:6px 12px;border-radius:8px;font-weight:bold}
-nav a{margin-left:16px;font-weight:bold}
+.logo{font-weight:bold;color:var(--accent)}
+nav a{margin-left:16px;font-weight:bold;text-decoration:none;color:#333}
 
 .hero{display:grid;grid-template-columns:1fr 1fr;gap:20px;margin-top:20px}
-.hero img{width:50%;border-radius:12px}
+.hero img{width:100%;border-radius:12px}
 
 .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin-top:20px}
 .card{background:#fff;padding:12px;border-radius:12px;box-shadow:var(--shadow)}
 .card img{width:100%;height:160px;object-fit:cover;border-radius:8px}
 .card h3{margin:8px 0}
+.spec{font-size:13px;color:#666;line-height:1.4;margin-bottom:6px}
 .price{color:var(--accent);font-weight:bold}
 button{cursor:pointer}
-
 .add{margin-top:8px;padding:8px 12px;border:none;border-radius:8px;background:#f3e2d7}
 
 .cart{background:#fff;padding:12px;border-radius:12px;box-shadow:var(--shadow);max-width:420px;margin-top:20px}
@@ -37,9 +37,13 @@ form{background:#fff;padding:16px;border-radius:12px;box-shadow:var(--shadow)}
 input,textarea{width:100%;padding:10px;margin-top:8px;border-radius:8px;border:1px solid #ddd}
 .submit{background:var(--accent);color:#fff;border:none;font-weight:bold;margin-top:12px}
 
-footer{text-align:center;margin-top:30px;padding:20px;font-size:13px;color:#2d0f85}
+.steps{background:#fff;padding:16px;border-radius:12px;box-shadow:var(--shadow);margin-top:30px}
+.step{display:flex;gap:12px;margin-bottom:10px}
+.step span{background:var(--accent);color:#fff;width:26px;height:26px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-weight:bold}
 
-@media(max-width:500px){
+footer{text-align:center;margin:30px 0;font-size:13px}
+
+@media(max-width:600px){
   .hero{grid-template-columns:1fr}
 }
 </style>
@@ -49,7 +53,7 @@ footer{text-align:center;margin-top:30px;padding:20px;font-size:13px;color:#2d0f
 
 <header>
   <div class="container nav">
-    <div class="logo">Selamat datang di </div> <img src="img/Logo.jpg" alt="Lilicia Bakehouse">
+    <div class="logo">🍞 Lilicia Bakehouse</div>
     <nav>
       <a href="#produk">Produk</a>
       <a href="#checkout">Checkout</a>
@@ -59,13 +63,12 @@ footer{text-align:center;margin-top:30px;padding:20px;font-size:13px;color:#2d0f
 
 <div class="container">
 
-<!-- HERO -->
 <section class="hero">
   <div>
     <h1>Roti Hangat & Segar Setiap Hari</h1>
-    <p>Nikmati roti terbaik dengan bahan berkualitas.</p>
+    <p>Roti & kue rumahan, fresh, lembut, dan terjangkau.</p>
   </div>
-  
+  <img src="img/Logo.jpg" alt="Lilicia Bakehouse">
 </section>
 
 <!-- PRODUK -->
@@ -74,42 +77,59 @@ footer{text-align:center;margin-top:30px;padding:20px;font-size:13px;color:#2d0f
 
 <div class="grid">
 
-  <div class="card">
-    <img src="img/RotiManis.jpg" alt="RotiManis">
-    <h3>Roti Manis</h3>
-    <div class="price">Rp15.000</div>
-    <button class="add" onclick="addToCart('RotiManis',15000)">Tambah</button>
-  </div>
-
-  <div class="card">
-    <img src="img/BoluCoklat.jpg" alt="BoluCokelat">
-    <h3>Bolu Cokelat</h3>
-    <div class="price">Rp38.000</div>
-    <button class="add" onclick="addToCart('BoluCokelat',38000)">Tambah</button>
-  </div>
-
-  <div class="card">
-    <img src="img/RotiKeju.jpg" alt="RotiKeju">
-    <h3>Roti Keju</h3>
-    <div class="price">Rp45.000</div>
-    <button class="add" onclick="addToCart('RotiKeju',45000)">Tambah</button>
-  </div>
 <div class="card">
-    <img src="img/cookies.jpg" alt="RotiKeju">
-    <h3>Cookies</h3>
-    <div class="price">Rp25.000</div>
-    <button class="add" onclick="addToCart('cookies',25000)">Tambah</button>
-  </div>
+<img src="img/RotiManis.jpg">
+<h3>Roti Manis</h3>
+<div class="spec">Isi cokelat & keju<br>Berat ±120gr</div>
+<div class="price">Rp15.000</div>
+<button class="add" onclick="addToCart('Roti Manis','Isi cokelat & keju, 120gr',15000)">Tambah</button>
+</div>
+
+<div class="card">
+<img src="img/BoluCoklat.jpg">
+<h3>Bolu Cokelat</h3>
+<div class="spec">Cokelat premium<br>Loyang 20cm</div>
+<div class="price">Rp38.000</div>
+<button class="add" onclick="addToCart('Bolu Cokelat','Cokelat premium, loyang 20cm',38000)">Tambah</button>
+</div>
+
+<div class="card">
+<img src="img/RotiKeju.jpg">
+<h3>Roti Keju</h3>
+<div class="spec">Keju mozzarella<br>Berat ±150gr</div>
+<div class="price">Rp45.000</div>
+<button class="add" onclick="addToCart('Roti Keju','Keju mozzarella, 150gr',45000)">Tambah</button>
+</div>
+
+<div class="card">
+<img src="img/cookies.jpg">
+<h3>Cookies</h3>
+<div class="spec">Choco chips<br>Isi 10 pcs</div>
+<div class="price">Rp25.000</div>
+<button class="add" onclick="addToCart('Cookies','Choco chips, 10 pcs',25000)">Tambah</button>
+</div>
+
 </div>
 
 <!-- KERANJANG -->
 <div class="cart">
-  <strong>Keranjang</strong>
-  <div id="cartList"></div>
-  <p id="cartCount">0 item</p>
-  <button onclick="checkout()" class="submit">Checkout</button>
-  <button onclick="clearCart()" style="margin-top:6px">Kosongkan</button>
+<strong>Keranjang</strong>
+<div id="cartList"></div>
+<p id="cartCount">0 item</p>
+<button class="submit" onclick="checkout()">Checkout</button>
+<button onclick="clearCart()">Kosongkan</button>
 </div>
+</section>
+
+<!-- CARA PESAN -->
+<section class="steps">
+<h2>📝 Cara Pemesanan</h2>
+<div class="step"><span>1</span><p>Pilih produk lalu klik <b>Tambah</b></p></div>
+<div class="step"><span>2</span><p>Cek keranjang pesanan</p></div>
+<div class="step"><span>3</span><p>Klik <b>Checkout</b></p></div>
+<div class="step"><span>4</span><p>Isi nama & nomor WhatsApp</p></div>
+<div class="step"><span>5</span><p>Kirim pesanan via WhatsApp</p></div>
+<div class="step"><span>6</span><p>Tunggu konfirmasi admin</p></div>
 </section>
 
 <!-- CHECKOUT -->
@@ -117,113 +137,59 @@ footer{text-align:center;margin-top:30px;padding:20px;font-size:13px;color:#2d0f
 <h2>Rincian Pemesanan</h2>
 
 <form onsubmit="event.preventDefault();sendMessage();">
-  <textarea id="product" readonly placeholder="Rincian Produk"></textarea>
-  <input id="qty" readonly placeholder="Jumlah Item">
-  <input id="total" readonly placeholder="Total Harga">
-
-  <textarea id="msg" placeholder="Catatan (opsional)"></textarea>
-  <input id="name" placeholder="Nama Pemesan" required>
-  <input id="phone" placeholder="No WhatsApp" required>
-
-  <button type="submit" class="submit">🛒 Pesan via WhatsApp</button>
+<textarea id="product" readonly placeholder="Rincian Produk"></textarea>
+<input id="qty" readonly placeholder="Jumlah Item">
+<input id="total" readonly placeholder="Total Harga">
+<textarea id="msg" placeholder="Catatan"></textarea>
+<input id="name" placeholder="Nama Pemesan" required>
+<input id="phone" placeholder="No WhatsApp" required>
+<button class="submit">🛒 Pesan via WhatsApp</button>
 </form>
 </section>
 
 </div>
 
-<footer>© 2025 Bakehouse</footer>
+<footer>© 2025 Lilicia Bakehouse</footer>
 
 <script>
-const cart = [];
+const cart=[];
 
-// TAMBAH KE KERANJANG (QTY OTOMATIS)
-function addToCart(name, price){
-  const item = cart.find(p => p.name === name);
-  if(item){
-    item.qty++;
-  }else{
-    cart.push({name, price, qty: 1});
-  }
-  renderCart();
+function addToCart(name,spec,price){
+ const item=cart.find(p=>p.name===name);
+ if(item){item.qty++}else{cart.push({name,spec,price,qty:1})}
+ renderCart();
 }
 
-// TAMPILKAN KERANJANG
 function renderCart(){
-  const list = document.getElementById('cartList');
-  const count = document.getElementById('cartCount');
-
-  let totalItem = 0;
-  list.innerHTML = '';
-
-  cart.forEach(item=>{
-    totalItem += item.qty;
-    list.innerHTML += `
-      <div class="cart-item">
-        <span>${item.name} x${item.qty}</span>
-        <span>Rp${(item.price * item.qty).toLocaleString()}</span>
-      </div>
-    `;
-  });
-
-  count.innerText = totalItem + ' item';
+ let list=document.getElementById('cartList');
+ let count=document.getElementById('cartCount');
+ list.innerHTML=''; let totalItem=0;
+ cart.forEach(i=>{
+  totalItem+=i.qty;
+  list.innerHTML+=`<div class="cart-item"><span>${i.name} x${i.qty}</span><span>Rp${(i.price*i.qty).toLocaleString()}</span></div>`;
+ });
+ count.innerText=totalItem+' item';
 }
 
-// KOSONGKAN KERANJANG
-function clearCart(){
-  cart.length = 0;
-  renderCart();
-}
+function clearCart(){cart.length=0;renderCart();}
 
-// CHECKOUT
 function checkout(){
-  if(cart.length === 0){
-    alert('Keranjang kosong');
-    return;
-  }
-
-  let detailProduk = '';
-  let total = 0;
-  let totalItem = 0;
-
-  cart.forEach(item=>{
-    detailProduk += `- ${item.name} x${item.qty} = Rp${(item.price * item.qty).toLocaleString()}\n`;
-    total += item.price * item.qty;
-    totalItem += item.qty;
-  });
-
-  document.getElementById('product').value = detailProduk;
-  document.getElementById('qty').value = totalItem;
-  document.getElementById('total').value = 'Rp ' + total.toLocaleString();
-
-  document.getElementById('checkout').scrollIntoView({behavior:'smooth'});
+ if(cart.length===0){alert('Keranjang kosong');return;}
+ let detail='',total=0,item=0;
+ cart.forEach(i=>{
+  detail+=`- ${i.name} (${i.spec}) x${i.qty}\n`;
+  total+=i.price*i.qty; item+=i.qty;
+ });
+ product.value=detail;
+ qty.value=item;
+ total.value='Rp '+total.toLocaleString();
+ document.getElementById('checkout').scrollIntoView({behavior:'smooth'});
 }
 
-// KIRIM KE WHATSAPP (REAL)
 function sendMessage(){
-  const adminWA = "6281368178228"; // 🔴 GANTI NOMOR ADMIN
-
-  const pesan = `
-*PESANAN BARU - BAKEHOUSE*
--------------------------
-Nama: ${name.value}
-No WA: ${phone.value}
-
-Pesanan:
-${product.value}
-
-Jumlah Item: ${qty.value}
-Total: ${total.value}
-
-Catatan:
-${msg.value || '-'}
-
-Terima kasih 🙏
-`;
-
-  window.open(
-    "https://wa.me/" + adminWA + "?text=" + encodeURIComponent(pesan),
-    "_blank"
-  );
+ const adminWA="6281368178228";
+ const pesan=`PESANAN BARU\nNama: ${name.value}\nWA: ${phone.value}\n\nPesanan:\n${product.value}\nJumlah: ${qty.value}\nTotal: ${total.value}\n\nCatatan:\n${msg.value||'-'}`;
+ window.open("https://wa.me/"+adminWA+"?text="+encodeURIComponent(pesan));
 }
 </script>
 
